--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -1333,7 +1334,7 @@
             <div style="margin-top: 3rem; text-align: center;">
                 <div style="display: flex; justify-content: center; gap: 30px; flex-wrap: wrap;">
                     <div style="text-align: center;">
-                        <div style="font-size: 1.5rem; color: #00d4ff; font-weight: 700;">8</div>
+                        <div style="font-size: 1.5rem; color: #00d4ff; font-weight: 700;">16</div>
                         <div style="font-size: 0.9rem; color: #94a3b8;">STUDENTS</div>
                     </div>
                     <div style="text-align: center;">
@@ -1571,15 +1572,23 @@
     // Game Data with Teacher Messages and Special Attacks
     const gameData = {
         students: [
-            { id: 1, name: "ANIK", image: "https://i.postimg.cc/TPB0TWRV/Anik-Avatar.png", health: 100 },
-            { id: 2, name: "MAYANK", image: "https://i.postimg.cc/Gt5RJV82/Mayankesh-Avatar.png", health: 100 },
-            { id: 3, name: "PARTH", image: "https://i.postimg.cc/s2bm3ZVn/Parth-Avatar.png", health: 100 },
-            { id: 4, name: "PRANSHU", image: "https://i.postimg.cc/CK97wfFP/Pranshu-Avatar.png", health: 100 },
-            { id: 5, name: "RUDRA", image: "https://i.postimg.cc/7Lj9qTxt/Rudra-Avatar.png", health: 100 },
-            { id: 6, name: "SARTHAK", image: "https://i.postimg.cc/V6MRvL6g/Sarthak-Avatar.png", health: 100 },
-            { id: 7, name: "TAMMO", image: "https://i.postimg.cc/1t6HX5tJ/Tammo-Avatar.png", health: 100 },
-            { id: 8, name: "HARSHEEL", image: "https://i.postimg.cc/nc6hYFcW/Harsheel-Avatar.png", health: 100 }
-        ],
+    { id: 1, name: "ANIK", image: "https://i.postimg.cc/TPB0TWRV/Anik-Avatar.png", health: 100 },
+    { id: 2, name: "ANUBHAV", image: "https://i.postimg.cc/K82xbR32/Anubhav-Avatar.png", health: 100 },
+    { id: 3, name: "AYUSH", image: "https://i.postimg.cc/JzLM8GHr/Ayush-Avatar.png", health: 100 },
+    { id: 4, name: "HARSHEEL", image: "https://i.postimg.cc/nc6hYFcW/Harsheel-Avatar.png", health: 100 },
+    { id: 5, name: "HIMANSHU", image: "https://i.postimg.cc/zGr8NVHJ/Himanshu-Avatar.png", health: 100 },
+    { id: 6, name: "MAYANK", image: "https://i.postimg.cc/Gt5RJV82/Mayankesh-Avatar.png", health: 100 },
+    { id: 7, name: "PARTH", image: "https://i.postimg.cc/s2bm3ZVn/Parth-Avatar.png", health: 100 },
+    { id: 8, name: "PIYUSH", image: "https://i.postimg.cc/GmCdRHTb/Piyush-Avatar.png", health: 100 },
+    { id: 9, name: "PRANSHU", image: "https://i.postimg.cc/CK97wfFP/Pranshu-Avatar.png", health: 100 },
+    { id: 10, name: "PREET", image: "https://i.postimg.cc/T36fxp52/Preet-Avatar.png", health: 100 },
+    { id: 11, name: "RISHIKESH", image: "https://i.postimg.cc/GmxrmdvR/Rishikesh-Avatar.png", health: 100 },
+    { id: 12, name: "RITESH", image: "https://i.postimg.cc/13QsSfVz/Ritesh-Avatar.png", health: 100 },
+    { id: 13, name: "RUDRA", image: "https://i.postimg.cc/7Lj9qTxt/Rudra-Avatar.png", health: 100 },
+    { id: 14, name: "SARTHAK", image: "https://i.postimg.cc/V6MRvL6g/Sarthak-Avatar.png", health: 100 },
+    { id: 15, name: "SID", image: "https://i.postimg.cc/DwPFwn1K/Sid-Avatar.png", health: 100 },
+    { id: 16, name: "TAMMO", image: "https://i.postimg.cc/1t6HX5tJ/Tammo-Avatar.png", health: 100 }
+],
         
         teachers: [
             { 
