--- a/index.html
+++ b/index.html
@@ -1807,7 +1807,7 @@
         'Rubber Duck': 'Rubber Duck.mp3',
         'Taco Bell': 'Taco Bell.mp3',
         'Wow': 'Wow.mp3',
-        'RNintro': 'RNintro.mp3'
+        'RNintro': 'RNintro.ogg'
     };
 
     // Initialize game
